--- a/cmd/samples/pageflow/src/App.css
+++ b/cmd/samples/pageflow/src/App.css
@@ -9,58 +9,31 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-float infinite 3s ease-in-out;
   }
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-content {
-  min-width: 600px;
 }
 
 .App-link {
-  color: #61dafb;
+  color: rgb(112, 76, 182);
 }
 
-.grid {
-  display: flex;
-}
-
-.col-6 {
-  width: 50%;
-}
-
-.col-3 {
-  width: 25%;
-}
-
-.col-4 {
-  width: 33.3%;
-}
-
-.dd {
-  margin-left: 0;
-}
-
-.border-right {
-  border-right: 3px solid white;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@keyframes App-logo-float {
+  0% {
+    transform: translateY(0);
   }
-  to {
-    transform: rotate(360deg);
+  50% {
+    transform: translateY(10px)
+  }
+  100% {
+    transform: translateY(0px)
   }
 }
