--- a/cmd/samples/pageflow/src/components/ProgressButton/ProgressButton.module.css
+++ b/cmd/samples/pageflow/src/components/ProgressButton/ProgressButton.module.css
@@ -16,6 +16,14 @@
   margin-left: 8px;
 }
 
+.progressButton:hover, .button:focus {
+  border: 2px solid rgba(112, 76, 182, 0.4);
+}
+
+.progressButton:active {
+  background-color: rgba(112, 76, 182, 0.2);
+}
+
 .progressButton:after {
   content: "";
   background-color: rgba(112, 76, 182, 0.15);
@@ -26,7 +34,7 @@
   left: 0;
   top: 0;
   opacity: 0;
-  transition: width 1s linear, opacity 0.5s ease 1s;
+  transition: width 1s ease-in, opacity 0.25s ease-out 0.75s;
 }
 
 .progressButton:active:after {
