updating disabled button cursor

--- a/cmd/samples/pageflow/src/components/ProgressButton/ProgressButton.module.css
+++ b/cmd/samples/pageflow/src/components/ProgressButton/ProgressButton.module.css
@@ -18,6 +18,7 @@
 
 .progressButton:not(:enabled) {
   color: grey;
+  cursor: not-allowed;
 }
 
 .progressButton:enabled:hover, .button:enabled:focus {
