--- a/cmd/samples/pageflow/src/App.css
+++ b/cmd/samples/pageflow/src/App.css
@@ -19,7 +19,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(6px + 2vmin);
 }
 
 .App-content {
@@ -47,6 +47,7 @@
 }
 
 .dd {
+  font-size: 32px;
   margin-left: 0;
 }
 
