--- a/cmd/samples/pageflow/src/components/Button/Button.module.css
+++ b/cmd/samples/pageflow/src/components/Button/Button.module.css
@@ -8,13 +8,15 @@
   border: 2px solid transparent;
   color: rgb(112, 76, 182);
   padding-bottom: 4px;
+  position: relative;
   cursor: pointer;
   background-color: rgba(112, 76, 182, 0.1);
   border-radius: 2px;
+  text-decoration: none;
   transition: all 0.15s;
 }
 
-.button:not(:enabled) {
+.button:disabled {
   color: grey;
   cursor: not-allowed;
 }
@@ -25,4 +27,23 @@
 
 .button:enabled:active {
   background-color: rgba(112, 76, 182, 0.2);
+}
+
+.progressButton:after {
+  content: "";
+  background-color: rgba(112, 76, 182, 0.15);
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  opacity: 0;
+  transition: width 1s ease-in, opacity 0.25s ease-out 0.75s;
+}
+
+.progressButton:active:after {
+  width: 0%;
+  opacity: 1;
+  transition: 0s
 }
